[STREAMPIPES-613] Add check if adapter should be started on service restart